--- a/content/Final.html
+++ b/content/Final.html
@@ -141,12 +141,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W7 << <a href='W7.html'>Previous</a> <a href='W9.html'>Next</a> >> W9<br /><h1>W8</h1>
-<p><span style="color: #000000; font-family: Quicksand, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji'; font-size: 16px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: left; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: #ffffff; text-decoration-thickness: initial; text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;"></span><span style="color: #000000; font-family: Quicksand, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji'; font-size: 16px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: left; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: #ffffff; text-decoration-thickness: initial; text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;"></span></p>
-<p></p>
-<p><img alt="" height="699" src="./../images/擷取2.PNG" width="1239"/></p>
-<p></p>
-<br />W7 << <a href='W7.html'>Previous</a> <a href='W9.html'>Next</a> >> W9</div>
+    <div id="tipue_search_content">onshape1 << <a href='onshape1.html'>Previous</a> <br /><h1>Final</h1>
+<a href="./../downloads/123.7z">彈珠檯零件</a></div>
+</div><br />onshape1 << <a href='onshape1.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
