--- a/content/HW.html
+++ b/content/HW.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li class='has-children'><a href='每週進度.html'>每週進度</a><ul class='dropdown'><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a><li><a href='W3.html'>W3</a><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='W8.html'>W8</a><li><a href='W9.html'>W9</a><li class='has-children'><a href='W10.html'>W10</a><ul class='dropdown'><li><a href='h2.html'>h2</a></li></ul><li><a href='W11.html'>W11</a><li><a href='W12.html'>W12</a><li><a href='W13.html'>W13</a><li><a href='W14.html'>W14</a><li><a href='W15.html'>W15</a><li><a href='W16.html'>W16</a><li><a href='W17.html'>W17</a><li><a href='W18.html'>W18</a></li></ul><li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li><a href='w8.html'>w8</a><li><a href='w10.html'>w10</a><li class='has-children'><a href='w14.html'>w14</a><ul class='dropdown'><li><a href='Solvespace.html'>Solvespace</a><li><a href='NX.html'>NX</a><li><a href='Onshape.html'>Onshape</a></li></ul><li class='has-children'><a href='w15.html'>w15</a><ul class='dropdown'><li><a href='Solvespace1.html'>Solvespace1</a><li><a href='onshape1.html'>onshape1</a></li></ul><li><a href='Final.html'>Final</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li class='has-children'><a href='每週進度.html'>每週進度</a><ul class='dropdown'><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a><li><a href='W3.html'>W3</a><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='W8.html'>W8</a><li><a href='W9.html'>W9</a><li class='has-children'><a href='W10.html'>W10</a><ul class='dropdown'><li><a href='h2.html'>h2</a></li></ul><li><a href='W11.html'>W11</a><li><a href='W12.html'>W12</a><li><a href='W13.html'>W13</a><li><a href='W14.html'>W14</a><li><a href='W15.html'>W15</a><li><a href='W16.html'>W16</a><li><a href='W17.html'>W17</a><li><a href='W18.html'>W18</a></li></ul><li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li><a href='w6.html'>w6</a><li><a href='w8.html'>w8</a><li><a href='w10.html'>w10</a><li class='has-children'><a href='w14.html'>w14</a><ul class='dropdown'><li><a href='Solvespace.html'>Solvespace</a><li><a href='NX.html'>NX</a><li><a href='Onshape.html'>Onshape</a></li></ul><li class='has-children'><a href='w15.html'>w15</a><ul class='dropdown'><li><a href='Solvespace1.html'>Solvespace1</a><li><a href='onshape1.html'>onshape1</a></li></ul><li><a href='Final.html'>Final</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,8 +141,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W18 << <a href='W18.html'>Previous</a> <a href='w8.html'>Next</a> >> w8<br /><h1>HW</h1>
-<br />W18 << <a href='W18.html'>Previous</a> <a href='w8.html'>Next</a> >> w8</div>
+    <div id="tipue_search_content">W18 << <a href='W18.html'>Previous</a> <a href='w6.html'>Next</a> >> w6<br /><h1>HW</h1>
+<br />W18 << <a href='W18.html'>Previous</a> <a href='w6.html'>Next</a> >> w6</div>
         
     <!-- footer -->
       <div class="container">
