--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -376,6 +376,7 @@ doc["aitetris"].bind("click", aitetris.do)
 <h2>W18</h2>
 <h1>HW</h1>
 <h2>w6</h2>
+<p>零件1</p>
 <p><span style="color: #000000; font-family: Quicksand, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji'; font-size: 16px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: left; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: #ffffff; text-decoration-thickness: initial; text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;">
 <script>
 var winkVideoData8 = {  dataVersion: 1,  frameRate: 10,  buttonFrameLength: 5,  buttonFrameOffset: 2,  frameStops: {  },
@@ -385,6 +386,7 @@ var winkVideoData8 = {  dataVersion: 1,  frameRate: 10,  buttonFrameLength
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData8" height="630" muted="true" width="1008">
 <source src="./../downloads/wink影片/零件1.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
+<div class="winkVideoOverlayClass">零件2</div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
 <div class="winkVideoControlBarProgressLeftClass"></div>
