--- a/config/content.htm
+++ b/config/content.htm
@@ -555,5 +555,18 @@ var winkVideoData4 = {
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData4" height="630" muted="true" width="1008">
 <source src="./../downloads/wink影片/w15 onshape.mp4" type="video/mp4"/></video>
 <h2>Final</h2>
-<a href="/downloads/123.7z">彈珠檯零件</a></div>
+<p><a href="/downloads/123.7z">彈珠檯零件</a></p>
+<p><span style="color: #000000; font-family: Quicksand, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji'; font-size: 16px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: left; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: #ffffff; text-decoration-thickness: initial; text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;">
+<script>
+var winkVideoDatafinal = {  dataVersion: 1,  frameRate: 10,  buttonFrameLength: 5,  buttonFrameOffset: 2,  frameStops: {  },
+};
+</script>
+</span></p>
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoDatafinal" height="630" muted="true" width="1008">
+<source src="./../downloads/wink影片/彈珠檯.mp4" type="video/mp4"/></video>
+<div class="winkVideoOverlayClass"></div>
+<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressLeftClass"></div>
 </div>
+</div></div></div>
