--- a/content/Final.html
+++ b/content/Final.html
@@ -142,7 +142,9 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">onshape1 << <a href='onshape1.html'>Previous</a> <br /><h1>Final</h1>
-<p><a href="./../downloads/123.7z">彈珠檯零件</a></p>
+<p>根據 <a href="https://www.youtube.com/shorts/08TMJ_lJdZU" rel="noreferrer noopener" tabindex="-1" target="_blank" title="https://www.youtube.com/shorts/08tmj_ljdzu">https://www.youtube.com/shorts/08TMJ_lJdZU</a> 以及 <a href="https://www.youtube.com/watch?v=Jn8nxSZdF_c" rel="noreferrer noopener" tabindex="-1" target="_blank" title="https://www.youtube.com/watch?v=jn8nxszdf_c">https://www.youtube.com/watch?v=Jn8nxSZdF_c</a> 中的機構設計, 以 Coppeliasim 4.3.0 rev 12 完成一個彈珠台遊戲系統, 使用者可透過鍵盤操作送球與挑球動作進行遊戲, 期間並可透過感測器依據碰撞與彈射位置計算得分.</p>
+<p>組員:41023118、41023120、41023124</p>
+<p><a href="./../downloads/彈珠檯.7z">彈珠檯.7z</a></p>
 <p><span style="color: #000000; font-family: Quicksand, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji'; font-size: 16px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: left; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: #ffffff; text-decoration-thickness: initial; text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;">
 <script>
 var winkVideoDatafinal = {  dataVersion: 1,  frameRate: 10,  buttonFrameLength: 5,  buttonFrameOffset: 2,  frameStops: {  },
