--- a/config/content.htm
+++ b/config/content.htm
@@ -376,6 +376,7 @@ doc["aitetris"].bind("click", aitetris.do)
 <h2>W18</h2>
 <h1>HW</h1>
 <h2>w6</h2>
+<p><a href="/downloads/鑽床零件.7z">鑽床零件.7z</a></p>
 <p>零件1</p>
 <p><span style="color: #000000; font-family: Quicksand, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji'; font-size: 16px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: left; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: #ffffff; text-decoration-thickness: initial; text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;">
 <script>
